--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,10 +5,10 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">WELCOME TO WESTEROSCRAFT</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming.</span>
+        <span id="welcomeHeader">Welcome to the plane of A'therys</span>
+        <span id="welcomeDescription">An original Minecraft fantasy roleplay featuring staff and player driven storylines, immersive lore, and an engaging community. If you are new to our pack, we recommend that you join our discord. For important updates and information about events, and other community topics, visit our forums.</span>
         <br>
-        <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
+        <span id="welcomeDescCTA">You are just a few clicks away from Atherys.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
