--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -6,7 +6,7 @@
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
         <span id="welcomeHeader">Welcome to the plane of A'therys</span>
-        <span id="welcomeDescription">An original Minecraft fantasy roleplay featuring staff and player driven storylines, immersive lore, and an engaging community. If you are new to our pack, we recommend that you join our discord. For important updates and information about events, and other community topics, visit our forums.</span>
+        <span id="welcomeDescription">An original Minecraft fantasy roleplay featuring staff and player driven storylines, immersive lore, and an engaging community. If you are new to our pack, we recommend that you join our Discord. For important updates and information about events, and other community topics, visit our forums.</span>
         <br>
         <span id="welcomeDescCTA">You are just a few clicks away from Atherys.</span>
         <button id="welcomeButton">
